# farmwise

./: .gitignore  README.md  RESOURCES.md  setup.cfg
data/: usda.csv
farmwise/data/: data.py
notebooks/: county_yield_data.csv  ee.ipynb  era5.ipynb  era5_temperature.grib  era5_temperature.nc  national_farm_survey_acres_ge_1997.csv  usda.ipynb
