[metadata]
name = farmwise
version = 1.0.0
author = Jaewon Chung
author_email = j1c@jhu.edu
description = Forecasting Agriculture Resources for Maximizing Yield Estimates in California
long_description = file: README.md
keywords = one, two
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
install_requires =
    pytorch
    numpy
    scipy
    pandas
    seaborn
    pymodis
    black
    jupyter
    jupyterlab
    matplotlib
    scikit-learn
    tqdm
